fix collapsable button

--- a/src/assets/scss/form-style.scss
+++ b/src/assets/scss/form-style.scss
@@ -103,14 +103,17 @@
   // collaps button style
   .collaps-button {
     margin-right: 10px;
-    .button.button-circle {
+    .button-circle {
       background-color: transparent;
       width: 20px;
       height: 20px;
       color: #3d3d65;
-      border-color: #3d3d65;
-      font-size: 8px;
+      border: 1px solid #3d3d65;
+      font-size: 10px;
       border-radius: 50%;
+      text-align: center;
+      line-height: 20px;
+      cursor: pointer;
     }
   }
   // toggle button style
